Updates from ShareLaTeX

--- a/extracted.bib
+++ b/extracted.bib
@@ -695,3 +695,32 @@
   eid =           {A44},
 }
 
+@ARTICLE{Goldsmith2017,
+   author = {{Goldsmith}, P.~F. and {Kauffmann}, J.},
+    title = "{Electron Excitation of High Dipole Moment Molecules Re-examined}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1708.07553},
+ keywords = {ISM: molecules, molecular processes, photon-dominated region: PDR},
+     year = 2017,
+    month = may,
+   volume = 841,
+      eid = {25},
+    pages = {25},
+      doi = {10.3847/1538-4357/aa6f12},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...841...25G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Dickinson1975,
+   author = {{Dickinson}, A.~S. and {Richards}, D.},
+    title = "{The rotational excitation of polar molecules by electrons}",
+  journal = {Journal of Physics B Atomic Molecular Physics},
+     year = 1975,
+    month = dec,
+   volume = 8,
+    pages = {2846-2857},
+      doi = {10.1088/0022-3700/8/17/017},
+   adsurl = {http://adsabs.harvard.edu/abs/1975JPhB....8.2846D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
